# provenloop

./: .dockerignore  .gitignore  BEST_PRACTICES.md  README.md  bench_split_ws.py  bench_tensafe_moe.py  relay.py  requirements.txt  test_chatml_e2e.py  test_compare_paths.py  test_timing.py  test_tokenizer_mismatch.py  test_training_format_e2e.py  test_ws.py  wsl_setup.sh
.github/workflows/: ci.yml
compliance/dashboard/: __init__.py  app.py
compliance/hipaa/: baa_template.md  pia.md
compliance/nist-ai-rmf/: alignment.md
compliance/soc2/: controls.md
demonstrator/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
demonstrator/adapters/: sft_results.json
demonstrator/docs/: model_selection_analysis.md  throughput_analysis.md
demonstrator/frontend/: app.js  (+3 more)
docs/: BATCH_DECRYPT.md  DIFFERENTIAL_PRIVACY.md  GATELINK_SPLIT.md  PERFORMANCE.md  SALES_MARKETING_STRATEGY.md  TRAINING_PIPELINE.md  ZERO_MOAI.md
tensafe/: __init__.py
tensafe-he/: Cargo.toml
tensafe-he/crates/tensafe-he-core/: Cargo.toml
tensafe-he/crates/tensafe-he-core/src/: ciphertext.rs  encoding.rs  lib.rs  ntt.rs  params.rs  rng.rs  rns.rs  sampling.rs  serialize.rs
tensafe-he/crates/tensafe-he-cpu/: Cargo.toml
tensafe-he/crates/tensafe-he-cpu/src/: lib.rs
tensafe-he/crates/tensafe-he-cuda/: Cargo.toml
tensafe-he/crates/tensafe-he-cuda/src/: context.rs  kernels.rs  lib.rs  ntt.rs  poly.rs
tensafe-he/crates/tensafe-he-python/: Cargo.toml  pyproject.toml
tensafe-he/crates/tensafe-he-python/src/: lib.rs
tensafe-he/crates/tensafe-pqc/: Cargo.toml
tensafe-he/crates/tensafe-pqc/src/: dilithium.rs  kyber.rs  lib.rs  ntt_pqc.rs
tensafe_platform/: __init__.py
tgsp-spec/: README.md
(+68 files in other folders)
