[workspace]
resolver = "2"
members = [
    "crates/tensafe-he-core",
    "crates/tensafe-he-cpu",
    "crates/tensafe-he-cuda",
    "crates/tensafe-he-python",
    "crates/tensafe-pqc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = "thin"
codegen-units = 1
