[package]
name = "tensafe-he-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TenSafe-HE core: CKKS parameters, RNS arithmetic, encoding, NTT, ciphertext operations"

[dependencies]
# Zero external dependencies — all crypto primitives are self-contained.
# ChaCha20 RNG (rng.rs), Box-Muller Gaussian (rng.rs), rejection sampling (rng.rs).

[dev-dependencies]
approx = "0.5"
