[package]
name = "tensafe-he-cuda"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CUDA-accelerated CKKS backend for TenSafe-HE"

[dependencies]
tensafe-he-core = { path = "../tensafe-he-core" }
cudarc = { version = "0.12", features = ["cuda-version-from-build-system"] }
